--- a/views/ajax_examples/index.html
+++ b/views/ajax_examples/index.html
@@ -1,7 +1,7 @@
 {{extend 'layout.html'}}
 
 <p>Type something and press the button.
-   The last 10 entries will appear sorted in a table below.</p>
+   The last 10 entries will appear sorted in a table below. Welcom to Test3</p>
 
 <form>
 <INPUT type="text" id="q" name = "q" value="web2py"/>
